--- a/math_sem1.tex
+++ b/math_sem1.tex
@@ -617,14 +617,34 @@ $ \exists c > 0, \forall x \in [a;b]: |f(x)| \leq c $
 Пусть $y = f(x), x_0 \in \mathcal{D}(f(x))$. Рассмотрим график функции. и  прямые $y = k(x - x_0) + f(x_0)$
 Среди всех таких прямвх рассмотрим ту, которая наиболее тесно прижимается к графику функции $f(x)$.
 Такая прямая называется касательной к графику функции в точке $(x_0; f(x_0))$. Эту прямую можно найти так:
-На графике функции рассмотрим кроме $(x_0; f(x_0))$ и прямую, проходящую через эти точки. Эта прямая - секущая
+\textcolor{red}{На графике функции рассмотрим кроме $(x_0; f(x_0))$ рассмотрим $(x_1; f(x_1))$ и прямую, проходящую через эти точки. Эта прямая - секущая, приближённая\footnote{Размытое определение}}
 
+\par Уравнение секущей с угловым коеффициентом. Так как секущая должна роходить через $(x_0; f(x_0))$ должно выпоняться равенство $k = \frac{f(x_1) - f(x_0)}{x_1 - x_0} \Rightarrow (x_1; f(x_1)) \rightarrow (x_0; f(x_0)) \Leftrightarrow x_1 - x_0 \Rightarrow 
+k = \lim_{x \rightarrow x_0}{\frac{f(x_1) - f(x_0)}{x_1 - x_0}}$ Если этот преел конечен и существует, то он есть производная функции
+$y = f(x)$ в $x_0$ и обозначается $f'(x_0)$ \\
+$x_1 - x_0 = \Delta x, f(x_1) - f(x_0) = \Delta f(x_0) \\ f'(x_0) = lim_{\Delta x \rightarrow 0}{\frac{\Delta f(x_0)}{\Delta x}}$ иногда обозначается $\frac{df(x_0)}{dx}$ \par Может оказаться, что $lim_{\Delta x \rightarrow 0}{\frac{\Delta f(x_0)}{\Delta x}}$ бесконечен, 
+в этом случае касательая к графику в точке вертикальна
+\par Как известно, существование конечного предела равносильно существованию и равенству между собой односторонних пределов $lim_{\Delta x \rightarrow 0+0}{\frac{\Delta f(x_0)}{\Delta x}}$ и $lim_{\Delta x \rightarrow 0-0}{\frac{\Delta f(x_0)}{\Delta x}}$
+Эти односторонние пределы, если они конечны и существуют, называются односторонними производными и обозначаются $f'(x_{0-0})$ и $f'(x_{0+0})$
+Их существование означает существование касательной к фрагменту графика функции левее и правее $(x_0; f(x_0))$. Справедливо и обратное.
+\par Возможны случаи, когда односторонние пределы существуют, но не равны друг другу это значит, что в точке $(x_0; f(x_0))$ терпит излом и не является гладким.
 
-
-
-
-
-
-
-
+\pgfplotsset{every axis/.append style={
+        axis x line=middle,    % put the x axis in the middle
+        axis y line=middle,    % put the y axis in the middle
+        axis line style={<->}, % arrows on the axis
+        xlabel={$x$},          % default put x on x-axis
+        ylabel={$y$},          % default put y on y-axis
+        title = Излом графика функции
+        }}
+    \begin{tikzpicture}
+    	\begin{axis}[
+    		xmin=-5,xmax=5,
+    		ymin=-5,ymax=5]
+    		\addplot [red,thick, domain=-4:0.7] expression {0.2*x + 0.87};
+			\addplot [red,thick, domain=0.7:4] expression {-1.3*x + 1.9};
+			\addplot [blue,thick, domain=-4:1] expression {sin(deg(x+1))};
+			\addplot [blue,thick, domain=1:4] expression {-tan(deg(x-2)) - 0.6};
+    	\end{axis}
+    \end{tikzpicture}
 \end{document}
