--- a/math_sem1.tex
+++ b/math_sem1.tex
@@ -557,9 +557,6 @@ $y = f(x)$ определена на $(x_0 - \delta; x_0]$ такая функц
             $e^x - 1$ & x \\
             $(1+x)^\beta - 1$ & $\beta x$ \\
             $x^\beta - 1$ & $\beta(x-1)$
-
-
-
         \end{tabular}
     \end{center}
 
@@ -619,10 +616,10 @@ $ \exists c > 0, \forall x \in [a;b]: |f(x)| \leq c $
 Такая прямая называется касательной к графику функции в точке $(x_0; f(x_0))$. Эту прямую можно найти так:
 \textcolor{red}{На графике функции рассмотрим кроме $(x_0; f(x_0))$ рассмотрим $(x_1; f(x_1))$ и прямую, проходящую через эти точки. Эта прямая - секущая, приближённая\footnote{Размытое определение}}
 
-\par Уравнение секущей с угловым коеффициентом. Так как секущая должна роходить через $(x_0; f(x_0))$ должно выпоняться равенство $k = \frac{f(x_1) - f(x_0)}{x_1 - x_0} \Rightarrow (x_1; f(x_1)) \rightarrow (x_0; f(x_0)) \Leftrightarrow x_1 - x_0 \Rightarrow 
+\par Уравнение секущей с угловым коеффициентом. Так как секущая должна роходить через $(x_0; f(x_0))$ должно выпоняться равенство $k = \frac{f(x_1) - f(x_0)}{x_1 - x_0} \Rightarrow (x_1; f(x_1)) \rightarrow (x_0; f(x_0)) \Leftrightarrow x_1 - x_0 \Rightarrow
 k = \lim_{x \rightarrow x_0}{\frac{f(x_1) - f(x_0)}{x_1 - x_0}}$ Если этот преел конечен и существует, то он есть производная функции
 $y = f(x)$ в $x_0$ и обозначается $f'(x_0)$ \\
-$x_1 - x_0 = \Delta x, f(x_1) - f(x_0) = \Delta f(x_0) \\ f'(x_0) = lim_{\Delta x \rightarrow 0}{\frac{\Delta f(x_0)}{\Delta x}}$ иногда обозначается $\frac{df(x_0)}{dx}$ \par Может оказаться, что $lim_{\Delta x \rightarrow 0}{\frac{\Delta f(x_0)}{\Delta x}}$ бесконечен, 
+$x_1 - x_0 = \Delta x, f(x_1) - f(x_0) = \Delta f(x_0) \\ f'(x_0) = lim_{\Delta x \rightarrow 0}{\frac{\Delta f(x_0)}{\Delta x}}$ иногда обозначается $\frac{df(x_0)}{dx}$ \par Может оказаться, что $lim_{\Delta x \rightarrow 0}{\frac{\Delta f(x_0)}{\Delta x}}$ бесконечен,
 в этом случае касательая к графику в точке вертикальна
 \par Как известно, существование конечного предела равносильно существованию и равенству между собой односторонних пределов $lim_{\Delta x \rightarrow 0+0}{\frac{\Delta f(x_0)}{\Delta x}}$ и $lim_{\Delta x \rightarrow 0-0}{\frac{\Delta f(x_0)}{\Delta x}}$
 Эти односторонние пределы, если они конечны и существуют, называются односторонними производными и обозначаются $f'(x_{0-0})$ и $f'(x_{0+0})$
@@ -641,10 +638,64 @@ $x_1 - x_0 = \Delta x, f(x_1) - f(x_0) = \Delta f(x_0) \\ f'(x_0) = lim_{\Delta 
     	\begin{axis}[
     		xmin=-5,xmax=5,
     		ymin=-5,ymax=5]
-    		\addplot [red,thick, domain=-4:0.7] expression {0.2*x + 0.87};
-			\addplot [red,thick, domain=0.7:4] expression {-1.3*x + 1.9};
+    		\addplot [red,thick, domain=-4:1] expression {-0.3*x + 1.2};
+			\addplot [red,thick, domain=1:4] expression {-2.6*x + 3.5};
 			\addplot [blue,thick, domain=-4:1] expression {sin(deg(x+1))};
 			\addplot [blue,thick, domain=1:4] expression {-tan(deg(x-2)) - 0.6};
     	\end{axis}
     \end{tikzpicture}
+\begin{thm}
+	Если $f(x)$ имеет конечную производную в точке $x_0$, то она непрерывна в этой точке.
+  \begin{proof}
+    \begin{center}
+      Пусть Существует конечный предел \\
+      $\lim_{\Delta x \rightarrow 0}{\frac{\Delta f(x_0)}{\Delta x }} = f'(x_0) \Leftrightarrow \Delta f(x_0) = f'(x_0)+o(\Delta x)$ \\
+      Перейдём к пределу при $\Delta x \rightarrow 0$: \\
+      $\lim_{\Delta x \rightarrow 0}{\Delta f(x_0)} = 0 \Leftrightarrow f(x) \Leftrightarrow f(x_0)$ непрерывна в $x_0$ \\
+    \end{center}
+    Заметим, что обратное утверждение неверно.
+  \end{proof}
+\end {thm}
+Так как производная - предел, из свойств пределов можно вывести свойства производных:
+\begin{enumerate}
+  \item $(f \pm g)' = f' \pm g'$
+  \item $(cf)' = c(f)'$
+  \item $(f \cdot g)' = f'g \cdot g'f$
+  \item\footnote{proofs are pending} $(\frac{f}{g})' = \frac{f'g - g'f}{g^2}$
+  \item $c' = 0$
+\end{enumerate}
+%\begin{table}
+  \begin{center}
+      \begin{tabular}{c|c}
+        $f(x)$ & $f'(x)$ \\
+        \hline \\
+        $tg(x)$ & $\frac{1}{cos^2(x)}$ \\
+          \hline \\
+        $ctg(x)$ & $\frac{-1}{cos^2(x)}$ \\
+          \hline \\
+        $x^k$ & $k \cdot x^{x-1}$ \\
+          \hline \\
+        $e^x$ & $e^x$ \\
+          \hline \\
+        $log_a x$ & $\frac{1}{x \cdot ln(a)}$ \\
+          \hline \\
+        $ln(x)$ & $\frac{1}{x}$ \\
+          \hline \\
+        $arcsin(x)$ & $\frac{1}{\sqrt{1 - x^2}}$ \\
+          \hline \\
+        $arccos(x)$ & $\frac{-1}{\sqrt{1 - x^2}}$ \\
+          \hline \\
+        $arctg(x)$ & $\frac{1}{1 + x^2}$ \\
+          \hline \\
+        $arcctg(x)$ & $\frac{-1}{1 + x^2}$ \\
+      \end{tabular}
+  \end{center}
+%\end{table}
+Производная сложной функции:
+\begin{itemize}
+  \item $(f(g(x)))' = f'(g(x)) \cdot g'(x)$
+  \item $(f^{-1}(y))' = \frac{1}{f'(x)}$ при $y = f(x)$
+  \item $f'(x) = \frac{1}{f^{-1}(y)}$ при $y = f(x)$
+\end{itemize}
+
 \end{document}
