--- a/math_sem1.tex
+++ b/math_sem1.tex
@@ -1,5 +1,4 @@
 \documentclass[oneside]{book}
-\author{по конспектам лекций Рачковского Н.Н. \\ студентов группы 950501}
 
 \usepackage[russian]{babel}
 \usepackage{enumitem}
@@ -13,7 +12,10 @@
 \usepackage{pgfplots}
 \usepackage{graphicx}
 \usepackage{wrapfig}
+\usepackage[utf8]{inputenc}
+\usepackage[T1, T2A]{fontenc}
 
+\author{по конспектам лекций Рачковского Н.Н. \\ студентов группы 950501}
 
 \newcommand{\boxedeq}[2]{\begin{empheq}[box={\fboxsep=6pt\fbox}]{align}\label{#1}#2\end{empheq}}
    \newtheorem{thm}{Тероэма}[chapter] % reset theorem numbering for each chapter
@@ -817,6 +819,130 @@ $$
     $$
   \end{proof}
 \end{thm}
+
+\chapter{Уравнение касательной и нормали к графику функции}
+Данная глава находится в разработке, при отсутствии в ней полезной информации (или вообще какой-либо информации вините еврея, араба и немца (с явными расистскими наклонностями)
+\pagebreak
+
+\chapter{Основные правила дифференцирования. Производные элементарных функций}
+Данная глава находится в разработке, при отсутствии в ней полезной информации (или вообще какой-либо информации вините еврея, араба и немца (с явными расистскими наклонностями)
+\pagebreak
+
+\chapter{Дифференциал функции}
+Данная глава находится в разработке, при отсутствии в ней полезной информации (или вообще какой-либо информации вините еврея, араба и немца (с явными расистскими наклонностями)
+\pagebreak
+
+\chapter{Производные и дифференциалы высших порядков}
+Данная глава находится в разработке, при отсутствии в ней полезной информации (или вообще какой-либо информации вините еврея, араба и немца (с явными расистскими наклонностями)
+\pagebreak
+
+\chapter{Дифференцирование функции, заданной параметрически}
+Данная глава находится в разработке, при отсутствии в ней полезной информации (или вообще какой-либо информации вините еврея, араба и немца (с явными расистскими наклонностями)
+\pagebreak
+
+\chapter{Локальный экстремум функции, теорема Ферма(та, которая отстойная, а не которая великая терема Ферма)}
+Данная глава находится в разработке, при отсутствии в ней полезной информации (или вообще какой-либо информации вините еврея, араба и немца (с явными расистскими наклонностями)
+\pagebreak
+
+\chapter{Теоремы Ролля, Лагранжа, Коши}
+Данная глава находится в разработке, при отсутствии в ней полезной информации (или вообще какой-либо информации вините еврея, араба и немца (с явными расистскими наклонностями)
+\pagebreak
+
+\chapter{Правило Лопиталя}
+Пусть функции $f(x)$ и $g(x)$ непрерывны и дифференцируемы в окрестности точки $x_{0}$ и обращаются в нуль в этой точке: $f(x_{0})=g(x_{0})=0$. Пусть $g'(x_{0})\neq 0$. Если существует предел $\lim_{x \to x_{0}} \dfrac{f'(x)}{g'(x)}$, то $\lim_{x \to x_{0}} \dfrac{f(x)}{g(x)} = \lim_{x \to x_{0}} \dfrac{f'(x)}{g'(x)}$.\\
+
+\textbf{Замечание:}
+Правило Лопиталя также справедливо, если  $\lim_{x \to x_{0}} f(x) =\lim_{x \to x_{0}} g(x) = \infty$\\
+
+\textbf{Доказательство}\\
+Функции $f(x)$ и $g(x)$ непрерывны и дифференцируемы в окрестности точки $x_{0}$, значит
+$f(x_{0})=\lim_{x \to x_{0}} f(x) = 0$ и $g(x_{0})=\lim_{x \to x_{0}} g(x) = 0$. По теореме Коши для отрезка $[x_{0};x]$, лежащего в окрестностях $x_{0}$ существует $\dfrac{f(x)-f(x_{0})}{g(x)-g(x_{0})}=\dfrac{f'(c)}{g'(c)}$, где $c$ лежит между точками $x$ и $x_{0}$. Учитывая, что  $f(x_{0})=g(x_{0})=0$, получаем \begin{center}
+	$\dfrac{f(x)}{g(x)}=\dfrac{f'(c)}{g'(c)}$.
+\end{center} При $x\to x_{0}$ $c$ также стремится к $x_{0}$; перейдем к пределу: \begin{center}
+	$\lim_{x \to x_{0}} \dfrac{f(x)}{g(x)} = \lim_{c \to x_{0}} \dfrac{f'(c)}{g'(c)}$.
+
+\end{center}
+Получается$\lim_{x \to x_{0}} \dfrac{f(x)}{g(x)} = \lim_{c \to x_{0}} \dfrac{f'(c)}{g'(c)}$, а $\lim_{x \to x_{0}} \dfrac{f'(x)}{g'(x)} = \lim_{c \to x_{0}} \dfrac{f'(c)}{g'(c)}$, значит \begin{center}
+	\boxedeq{eq:*}{\lim_{x{\large } \to x_{0}} \dfrac{f(x)}{g(x)} = \lim_{x \to x_{0}} \dfrac{f'(x)}{g'(x)}}
+\end{center}
+А если кратенько, то полученную формулу можно читать так: \textbf{предел отношения двух
+	бесконечно малых равен пределу отношения их производных, если по­
+	следний существует.}\\
+
+\textbf{Замечания:}
+\begin{enumerate}
+
+	\item Правило Лопиталя справедливо и в случае, когда функции $f(x)$ и $g(x)$ не определены при  $x=x_{0}$, но $\lim_{x \to x_{0}} f(x) = 0$ и $\lim_{x \to x_{0}} g(x) = 0$. В этом случае $f(x_{0})=\lim_{x \to x_{0}} f(x) = 0$ и $g(x_{0})=\lim_{x \to x_{0}} g(x) = 0$
+	\item Правило Лопиталя справедливо и в случае, когда ${x \to \infty}$: \begin{center}
+		$\lim_{x \to \infty} \dfrac{f(x)}{g(x)} = \lim_{x \to \infty} \dfrac{f'(x)}{g'(x)}$
+	\end{center}
+	\item Если производные $f'(x)$ и $g'(x)$ удовлетворяют тем же условиям, что и $f(x)$ и $g(x)$, то правило Лопиталя можно применить еще раз:\boxedeq{eq:*}{\lim_{x{\large } \to x_{0}} \dfrac{f(x)}{g(x)} = \lim_{x \to x_{0}} \dfrac{f'(x)}{g'(x)}=\lim_{x \to x_{0}} \dfrac{f''(x)}{g''(x)}}
+
+\end{enumerate}
+
+\textbf{Виды неопределенностей:}
+\begin{enumerate}
+	\item Неопределенность вида $\dfrac{0}{0}$:
+
+	$\lim_{x \to 0} \dfrac{1-cos(6x)}{2x^{2}}=
+	[\dfrac{0}{0}]=
+	\lim_{x \to 0} \dfrac{(1-cos(6x))'}{(2x^{2})'}=
+	\lim_{x \to 0} \dfrac{6sin(6x)}{4x}=
+	\dfrac{3}{2}\lim_{x \to 0} \dfrac{sin(6x)}{x}=
+	\dfrac{3}{2}\times[\dfrac{0}{0}]=
+	\dfrac{3}{2}\lim_{x \to 0} \dfrac{(sin(6x))'}{(x)'}=
+	\dfrac{3}{2}\lim_{x \to 0} \dfrac{6cos(6x)}{1}=
+	\dfrac{3}{2}\times 6=9$
+
+	\item Неопределенность вида $\dfrac{\infty}{\infty}$:
+
+	$\lim_{x \to \frac{\pi}{2}} \dfrac{tg(3x)}{tg(5x)}=
+	[\dfrac{\infty}{\infty}]=
+	\lim_{x \to \frac{\pi}{2}} \dfrac{(tg(3x))'}{(tg(5x))'}=
+	\lim_{x \to \frac{\pi}{2}}\dfrac{3cos^{2}(5x)}{5cos^{2}(3x)}=
+	\dfrac{3}{5}\times[\dfrac{0}{0}]=
+	\dfrac{3}{5}\lim_{x \to \frac{\pi}{2}}\dfrac{cos^{2}(5x)-1+1}{cos^{2}(3x)-1+1}=
+	\dfrac{3}{5}\lim_{x \to\frac{\pi}{2}}\dfrac{cos(10x)+1}{cos(6x)+1}=
+	\dfrac{3}{5}\times[\dfrac{0}{0}]=
+	\dfrac{3}{5}\lim_{x \to \frac{\pi}{2}} \dfrac{(cos(10x)+1)'}{(cos(6x)+1)'}=
+	\dfrac{3}{5}\lim_{x \to \frac{\pi}{2}} \dfrac{10sin(10x)}{6sin(6x)}=
+	\lim_{x \to \frac{\pi}{2}} \dfrac{sin(10x)}{sin(6x)}=
+	[\dfrac{0}{0}]=
+	\lim_{x \to \frac{\pi}{2}} \dfrac{(sin(10x))'}{(sin(6x))'}=
+	\lim_{x \to \frac{\pi}{2}} \dfrac{10cos(10x)}{6cos(6x)}=
+	\dfrac{5}{3}$
+
+	\textbf{Для пунктов 3-7 рассмотрим преобразования в общих случаях:}
+
+	\item Неопределенность вида $\infty-\infty$:
+
+	 Пусть $f(x)\to\infty, g(x)\to\infty$ при $x\to x_{0}$, тогда:\\
+
+	 $\lim_{x \to x_{0}} (f(x)-g(x))=
+	 [\infty-\infty]=
+	 \lim_{x \to x_{0}} (\dfrac{1}{\dfrac{1}{f(x)}}-\dfrac{1}{\dfrac{1}{g(x)}})=
+	 \lim_{x \to x_{0}} (\dfrac{{\dfrac{1}{g(x)}}-{\dfrac{1}{f(x)}}}{{\dfrac{1}{f(x)}}{\dfrac{1}{g(x)}}})=
+	 [\dfrac{0}{0}]=...$
+
+	\item Неопределенность вида $\infty\times 0$:
+
+	Пусть $f(x)\to\ 0, g(x)\to\infty$ при $x\to x_{0}$, тогда:\\
+
+	$\lim_{x \to x_{0}} (f(x)g(x))=
+	[\infty\times 0]=
+	\lim_{x \to x_{0}} \dfrac{f(x)}{\dfrac{1}{g(x)}}=
+	\dfrac{0}{0}=...$
+
+	\item Неопределенность вида $1^{\infty}$
+	\item Неопределенность вида $\infty^{0}$
+	\item Неопределенность вида $0^{0}$\\
+
+	\textbf{Для неопределенностей вида 4-7 воспользуемся следующим преобразованием:}
+
+	Пусть $f(x)\to\ 1, g(x)\to\infty$; или $f(x)\to\infty, g(x)\to 0$; или $f(x)\to\ 0, g(x)\to 0$ при $x\to x_{0}$. Для нахождения предела вида $\lim_{x\to x_{0}} f(x)^{g(x)}$ удобно сначала прологарифмировать выражение
+	 \begin{center}
+		$A=f(x)^{g(x)}$
+	\end{center}
 
 \end{document}
 
