added links to the TOC

--- a/math_sem1.tex
+++ b/math_sem1.tex
@@ -15,6 +15,12 @@
 \usepackage{fancyhdr}
 \usepackage[utf8]{inputenc}
 \usepackage[T1, T2A]{fontenc}
+\usepackage{color}   %May be necessary if you want to color links
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks=false, %set true if you want colored links
+    linktoc=all,     %set to all if you want both sections and subsections linked
+}
 
 \author{по конспектам лекций Рачковского Н.Н. \\ студентов группы 950501}
 
